--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ parchment_version = 2023.09.03
 
 # Create
 # https://modrinth.com/mod/create-fabric/versions
-create_version = 0.5.1-f-build.1335+mc1.20.1
+create_version = 0.5.1-h-build.1516+mc1.20.1
 
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
